# gw816

./: LICENSE  README.md  rp2040.cfg
bios/: .gitignore  Makefile  bios.inc  bios.s  bootstrap.inc  bootstrap.s  console.inc  console.s  gw816.inc  gw816_bios.cfg  hardware_vectors.s  monitor.inc  monitor.s  serial.inc  serial.s  system_vectors.s
clio/: .gitignore  CMakeLists.txt  README.md  main.c
clio/inc/: bus_module.h  config.h  cpu_module.h  irq_module.h  led_module.h  reg_module.h  ring_buffer.h  rom_module.h  serial_module.h
clio/modules/: bus_module.c  bus_module.pio  cpu_module.c  irq_module.c  led_module.c  reg_module.c  rom_defaults.c  rom_module.c  serial_module.c
hermes/: .gitignore  address_decoder.v  hermes.qpf  hermes.qsf  hermes.qws  hermes.sdc  hermes.v  irq_aggregator.v  synchronizer.v
kernel/: .gitignore  Makefile  README.md  gw816_kernel.cfg  kernel.cfg  romstrap.cfg
kernel/inc/: ascii.inc  bootstrap.inc  debug.inc  gw816.inc  kernel-api.inc  kernel-memory.inc  kernel-scratch.inc  kernel.inc  monitor-display.inc  monitor.inc  print.inc  ringbuffer.inc
kernel/src/bootstrap/: bootstrap.s  hardware_vectors.s
kernel/src/diagnostics/: memory_tests.s  mmu_tests.s
kernel/src/fonts/: charset.s
kernel/src/kernel/: debug.s  init.s  irq.s  jump_table.s  kernel.s  memory-old.s  memory.s  monitor.s  post.s  post_mmu.s  print.s  registers.s  scratch.s  serial.s  vectors.s
kernel/src/monitor/: display.s  monitor.s
kernel/src/romstrap/: romstrap.s
kernel/src/tests/: memory_tests.s
zeus/: address_decoder.v  bus_controller.sv  bus_controller.v  clock.ppf  clock.qip  clock.v  clock_bb.v  clock_generator.sv  data_bus_mux.sv  device_decode.stp  device_select_demux.sv  dual_port_dual_clk_ram.sv  dual_port_ram.sv  gw816-zeus.qpf  interrupt_controller.sv  irq_controller.v  memory_controller.stp  memory_controller.v  output_file.map  reset_controller.sv  reset_controller.v  sdram_controller.sv  spi_controller.v  sys_pll.ppf  sys_pll.qip  sys_pll.v  sys_pll_bb.v  vga_pll.ppf  vga_pll.qip  vga_pll.v  vga_pll_bb.v  video_controller.sv  video_controller.v  zeus.cof  zeus.map  zeus.qpf  zeus.qsf  zeus.qws  zeus.sdc  zeus.sv  (+3 more)
zeus/.qsys_edit/: preferences.xml
zeus/greybox_tmp/: cbx_args.txt
zeus/simulation/modelsim/: zeus.vo
zeus/simulation/questa/: zeus_run_msim_rtl_verilog.do.bak5
zeus/src/: bus_controller.stp  top.sv  zeus.sdc
zeus/src/cpu_bus/: cpu_65816_master.sv
zeus/src/greybox_tmp/: cbx_args.txt
zeus/src/mmu/: acl_config_ram.sv  mmu.sv
zeus/src/ps2/: ps2_controller.sv
zeus/src/sdram/: sdram_controller.sv
zeus/src/spi/: spi_controller.sv
zeus/src/spi/greybox_tmp/: cbx_args.txt
zeus/src/syscon/: pll_phi2.ppf  pll_phi2.qip  pll_phi2.v  pll_phi2_bb.v  pll_sys.ppf  pll_sys.qip  pll_sys.v  pll_sys_bb.v  syscon.sv
zeus/src/syscon/greybox_tmp/: cbx_args.txt
zeus/src/uart/: uart_controller.sv  uart_receiver.sv  uart_transmitter.sv
zeus/src/util/: fixed_priority_arbiter.sv
zeus/src/video/: layer_renderer.sv  line_buffer.sv  pll_vga.ppf  pll_vga.qip  pll_vga.v  pll_vga_bb.v  vga_signal_generator.sv  video_compositor.sv  video_controller.sv  vram.sv  vram_arbiter.sv  vram_controller.sv
zeus/src/video/greybox_tmp/: cbx_args.txt
zeus/src/wb_async_bridge/: wb_async_bridge.sv
